--- a/package.json
+++ b/package.json
@@ -4,10 +4,15 @@
   "private": true,
   "dependencies": {
     "@noriginmedia/react-spatial-navigation": "^2.12.9",
+    "@types/jest": "^29.2.2",
+    "@types/node": "^18.11.9",
+    "@types/react": "^16.8.0",
+    "@types/react-dom": "^16.8.0",
     "lodash": "^4.17.21",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
-    "react-scripts": "2.1.3"
+    "react-scripts": "2.1.3",
+    "typescript": "^4.8.4"
   },
   "scripts": {
     "start": "react-scripts start",
