--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lodash": "^4.17.21",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "2.1.3",
     "typescript": "^4.8.4"
   },
